Replace ".get(0)" by ".getFirst()"